# meco

./: .gitignore  README.md  code_optimiser.py  pyparser.py  pyproject.toml  workflow.py
code_optimization/: code_optimiser.py
code_optimization/Models/: models.py
examples/: factorial.py
src/meco/: __init__.py  code_optimizer.py  models.py  pyparser.py  workflow.py
test/: function.py
test/metrics_validator/: function_test.py
