[project]
name = "meco"
version = "0.1.0"
description = "micro evolutions for code optimisation"
authors = [
    {name = "atharva789",email = "62479753+atharva789@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai (>=1.66.5,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
